# demo_jaeger_microservice

./: Cargo.toml  README.md
add-service/: Cargo.toml
add-service/src/: add.rs  main.rs
app_cli/: Cargo.toml
app_cli/src/: main.rs
app_gateway/: Cargo.toml
app_gateway/src/: gateway.rs  main.rs
app_proto/: Cargo.toml  build.rs
app_proto/proto/: maths.proto  mul.proto
app_proto/src/: add.rs  lib.rs  maths.rs  mul.rs
mul-service/: Cargo.toml
mul-service/src/: main.rs  mul.rs
src/: main.rs
