[package]
name = "mul-service"
version = "0.1.0"
edition = "2021"


[dependencies]
log = "0.4.14"
app_proto = { path = "../app_proto/" }
opentelemetry = { version = "0.16.0", features = ["rt-tokio"] }
opentelemetry-jaeger = { version = "0.15.0", features = ["rt-tokio"] }
tokio = { version = "1.14.0", features = ["macros", "rt-multi-thread"] }
tonic = "0.6.1"
tracing = "0.1.29"
tracing-opentelemetry = "0.16.0"
tracing-subscriber = { version = "0.3.2", features = ["env-filter"] }

